--- a/index.html
+++ b/index.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
+<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout Form</title>
-    <style>
-        /* Styling for the form popup */
-        #checkout-form {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta data-name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!----======== CSS ======== -->
+    <link rel="stylesheet" href="style.css">
+    
+    <!--===== Boxicons CSS =====-->
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
+    <title>Image Gallery with Search Box</title>
 </head>
 <body>
-    <button id="checkout-button">Checkout</button>
+    <div class="container">
+        <div class="search-box">
+            <i class="bx bx-search"></i>
+            <input type="text" placeholder="Search a movie">
+        </div>
 
-    <!-- Form Popup -->
-    <div id="checkout-form">
-        <h2>Fill in your information:</h2>
-        <form id="user-info-form" action="https://formspree.io/f/xrgwornz" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
-
-            <label for="address">Address:</label>
-            <input type="text" id="address" name="address" required><br><br>
-
-            <label for="contact">Contact Number:</label>
-            <input type="text" id="contact" name="contact" required><br><br>
-
-            <input type="submit" value="Submit">
-        </form>
+        <div class="images">
+            <div class="image-box" data-name="spiderman">
+                <!--<img src="images/spiderman.jpg" alt="">-->
+                <h6>spiderman</h6>
+            </div>
+            <div class="image-box" data-name="joker">
+                <!--<img src="images/joker.jpg" alt="">-->
+                <h6>joker</h6>
+            </div>
+            <div class="image-box" data-name="ironman">
+                <!--<img src="images/ironman.jpg" alt="">-->
+                <h6>ironman</h6>
+            </div>
+            <div class="image-box" data-name="passenger">
+                <!--<img src="images/passenger.jpg" alt="">-->
+                <h6>passenger</h6>
+            </div>
+            <div class="image-box" data-name="space">
+                <!--<img src="images/space.jpg" alt="">-->
+                <h6>the space</h6>
+            </div>
+            <div class="image-box" data-name="spiderman">
+                <!--<img src="images/spiderman2.jpg" alt="">-->
+                <h6>spiderman 2</h6>
+            </div>
+            <div class="image-box" data-name="universe">
+                <!--<img src="images/universe.jpg" alt="">-->
+                <h6>the universe</h6>
+            </div>
+            <div class="image-box" data-name="spiderman">
+                <!--<img src="images/spiderman3.jpg" alt="">-->
+                <h6>spiderman 3</h6>
+            </div>
+            <div class="image-box" data-name="holiday">
+                <!--<img src="images/holiday.jpg" alt="">-->
+                <h6>holiday</h6>
+            </div>
+            <div class="image-box" data-name="ironman">
+                <!--<img src="images/ironman2.jpg" alt="">-->
+                <h6>ironman 2</h6>
+            </div>
+        </div>
     </div>
 
-    <script>
-        // JavaScript to show/hide the form popup
-        const checkoutButton = document.getElementById("checkout-button");
-        const checkoutForm = document.getElementById("checkout-form");
-
-        checkoutButton.addEventListener("click", function () {
-            checkoutForm.style.display = "block";
-        });
-
-        // JavaScript for form submission (handled by Formspree)
-        // No additional JavaScript is required for sending data to Formspree.
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
