--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
         <div class="images">
             <div class="image-box" data-name="spiderman">
-                <!--<img src="images/spiderman.jpg" alt="">-->
-                <h6>spiderman</h6>
+                <img src="image/pic1.jpg" alt="">
+                <h6>b00rat</h6>
             </div>
             <div class="image-box" data-name="joker">
-                <!--<img src="images/joker.jpg" alt="">-->
-                <h6>joker</h6>
+                <img src="image/pic2.jpg" alt="">
+                <h6>TestingLang</h6>
             </div>
             <div class="image-box" data-name="ironman">
-                <!--<img src="images/ironman.jpg" alt="">-->
-                <h6>ironman</h6>
+                <img src="image/pic3.jpg" alt="">
+                <h6>Mamahalin</h6>
             </div>
             <div class="image-box" data-name="passenger">
                 <!--<img src="images/passenger.jpg" alt="">-->
